--- a/Sociology-of-Education/第二周作业.md
+++ b/Sociology-of-Education/第二周作业.md
@@ -1,5 +1,5 @@
 # 教育社会学思考第二次作业
-<font face="Simsun" size=3>化学与分子工程学院   付锐</font>
+<font face="Simsun" size=3>Friedrich from CCME</font>
 
 > <font face="Simsun" size=4>在教育社会学形成的初期，有哪两种路径？</font>
 
