--- a/Sociology-of-Education/第三周作业.md
+++ b/Sociology-of-Education/第三周作业.md
@@ -1,5 +1,5 @@
 # 教育社会学思考第三次作业
-<font face="Simsun" size=3>化学与分子工程学院   付锐</font>
+<font face="Simsun" size=3>Friedrich from CCME</font>
 
 > <font face="Simsun" size=4>假设你要研究中国社会中“学区房”现象对不同家庭的影响，请尝试从不同角度提出具体的研究问题。并在此基础上寻找适合的研究方法进行分析，包括数据（资料）收集、数据分析、得出结论等步骤。</font>
 1. 考虑到《小欢喜》中的情节非常贴合现实，首先，我想分析“学区房”现象对不同职业学生家长生活的影响，采取混合分析的方法。
